--- a/index.html
+++ b/index.html
@@ -1024,6 +1024,34 @@
         <section id="projects">
             <h2>Projects</h2>
             <div class="projects-grid">
+                <!-- Luxury 3D Login & Signup UI -->
+                <div class="project-card" data-speed="0.4">
+                    <div class="project-mask"></div>
+                    <div class="project-image" style="background: linear-gradient(45deg, #8A2BE2, #4169E1);">
+                        <i class="fas fa-user-circle"></i>
+                    </div>
+                    <div class="project-content">
+                        <h3>✨ Luxury 3D Login & Signup UI</h3>
+                        <p>A modern, luxury-styled 3D animated login and signup interface designed to enhance user experience with smooth transitions and visually appealing effects. Features 3D form animations, smooth transitions, and a clean luxury-inspired design.</p>
+                        <div class="project-tech">
+                            <span class="tech-tag">HTML5</span>
+                            <span class="tech-tag">CSS3</span>
+                            <span class="tech-tag">JavaScript</span>
+                            <span class="tech-tag">3D Animations</span>
+                            <span class="tech-tag">Responsive Design</span>
+                            <span class="tech-tag">Modern UI/UX</span>
+                        </div>
+                        <div class="project-links">
+                            <a href="https://github.com/Asharathunisha-M/Luxury-3D-Login-Signup" target="_blank" class="project-link">
+                                <i class="fab fa-github"></i> GitHub
+                            </a>
+                            <a href="https://luxury-3-d-login-signup.vercel.app/" target="_blank" class="project-link">
+                                <i class="fas fa-external-link-alt"></i> Live Demo
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
                 <!-- Boutique Management Website -->
                 <div class="project-card" data-speed="0.1">
                     <div class="project-mask"></div>
